<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    android:orientation="vertical"
    tools:context=".controler.DetalheClienteActivity"
    >


    <TextView
        android:id="@+id/detalhe_txt_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorCinza"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <ImageView
        android:id="@+id/detalhe_foto_cliente"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_diretor"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <TextView
            android:id="@+id/detalhe_txt_diretor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorVermelho"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_data"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <TextView
            android:id="@+id/detalhe_txt_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorCinza"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_elenco"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/detalhe_txt_elenco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/colorCinza"
                />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_genero"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="30dp">

        <TextView
            android:id="@+id/detalhe_txt_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorAzul"
            />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_sinop"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="140dp">

        <TextView

            android:id="@+id/detalhe_txt_sinop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorAccent"
            />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhe_pop"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorCinza"
            />

        <TextView
            android:id="@+id/detalhe_txt_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorGG"
            />

    </LinearLayout>

</LinearLayout>